add block services
VER1

--- a/components/menu/Menu.module.scss
+++ b/components/menu/Menu.module.scss
@@ -1,3 +1,5 @@
+$colorHover: #33379f;
+
 .menu {
   display: flex;
   justify-content: space-around;
@@ -15,9 +17,9 @@
 }
 
 .menu a:first-child {
-  color: #33379f;
+  color: $colorHover;
 }
 
 .menu a:hover {
-  color: #33379f;
+  color: $colorHover;
 }
