--- a/components/title/Title.module.scss
+++ b/components/title/Title.module.scss
@@ -1,7 +1,7 @@
 .h3Heading {
   font-size: 16px;
   width: 70%;
-  margin: 0 auto;
+  margin: 0 auto 15px;
   text-align: center;
   line-height: 1.5;
 }
@@ -10,5 +10,5 @@
   font-size: 28px;
   text-transform: uppercase;
   text-align: center;
-  margin: 30px 0 15px;
+  margin: 30px auto 15px;
 }
